# APPUNTI

./: .gitignore  IngegneriaDelSoftware.md  LICENSE  README.md
ANNO_2/CTF/: REPORT_CHALLENGE_ITA.md
ANNO_2/Sistemi-Operativi/progetto Vannucci Lorenzo/: README.md  incrocio.h
ANNO_2/Sistemi-Operativi/progetto_incrocio/: build.sh  incrocio.h  spiegazione.md
Anno1/Architettura degli Elaboratori/py-pdp8-tk-master-EXAM/: Emulatore.py  pdp8.py
Anno2/Algoritmi/: bst.py  cercaDoppioneDueArray.py  inverti.py  ricercaArrayDoppio.py  somma_uguale.py  testAlg.py  testAlgInPlace.py
Anno2/CyberChallenge/: CYBER_BIBBIA.txt
Anno2/CyberChallenge/Hardware/Jupyter/client/cyberchallenge_client/: setup.cfg
Anno2/CyberChallenge/Hardware/Jupyter/client/cyberchallenge_client/cyberchallenge_client/: _result.py  ccclient.py
Anno2/CyberChallenge/Hardware/Jupyter/client/cyberchallenge_client/cyberchallenge_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Anno2/Linguaggi Formali/: README_Linguaggi_Formali.md
Anno3/Programmazione_web_mobile/: db.js  presentazione_progetto.pages
Anno3/Sistemi Distribuiti/: preparazione_sdep.pages
Anno3/Sistemi Distribuiti /: sdep.pages
CTF/: Boop_CTF_Writeup.md  NS_02-ImageScanner.md  predictable.md  report.md  rev_chall_writeup.md
CTF/predictable/: CR_1.12-Predictable IV.py
CTF/redacted/: redacted.md  solve.py
Ing-SW/: Ingegneria Del Software.md
Sistemi-Operativi/Progetto/: README.md  build.sh  run.sh  spiegazione.md
Sistemi-Operativi/progetto_incrocio/: WRITE_UP.md  build.sh  condiviso.h  run.sh  spiegazione.md
(+217 files in other folders)
