[metadata]
name = cyberchallenge_client
version = 0.0.1
description = CyberChallenge ChipWhisperer Client Lib
author_email = mrcuve0@posteo.net
license = GPLv3
url = https://github.com/RHESGroup/cw-cyberchallenge
author = Mrcuve0

[options]
packages = cyberchallenge_client 
install_requires =
    rpyc; python_version == "5.0.1"
    chipwhisperer; python_version == "5.5.0"